# pydrda

./: LICENSE  README.rst  pyproject.toml  setup.py  test_db2.py  test_derby.py
.circleci/: config.yml
.github/workflows/: python-package.yml  test.yml  test_db2.yml  test_derby.yml
drda/: __init__.py  codepoint.py  connection.py  consts.py  cursor.py  ddm.py  secmec9.py  utils.py
drda/tests/: test_db2.py  test_derby.py
misc/: drdaproxy.py
tests/: Test with NON NULL types and DRDA updates.ipynb  Test with NON NULL types.ipynb  Tests with NULL types.ipynb
