[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pydrda"
version = "0.5.3"
description = "DRDA protocol database driver"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Hajime Nakagami", email = "nakagami@gmail.com" },
]
keywords = ["Db2", "Apache Derby"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
requires-python = ">=3.11"
dependencies = ["pyDes"]

[tool.setuptools.packages.find]
include = ["drda*"]

[project.urls]
Homepage = "https://github.com/nakagami/pydrda/"
